crates/top/re_viewer/tests/integration/snapshots/integration__all_component_fallbacks__arch_fallback_rerun.archetypes.EncodedImage.snap
---
source: crates/top/re_viewer/tests/integration/all_component_fallbacks.rs
expression: arch_display
---
blob: [[0]]
media_type: [application/octet-stream]
opacity: [1.0]
draw_order: [-10.0]
magnification_filter: [1]
