crates/top/re_viewer/tests/integration/snapshots/integration__all_component_fallbacks__arch_fallback_rerun.archetypes.GaussianSplats3D.snap
---
source: crates/top/re_viewer/tests/integration/all_component_fallbacks.rs
expression: arch_display
---
centers: [[0.0, 0.0, 0.0]]
scales: [[1.0, 1.0, 1.0]]
quaternions: [[0.0, 0.0, 0.0, 1.0]]
colors: [3161148927]
sh_coefficients: [[[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0]]]
spherical_harmonics_degree: [3]
